--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -18,7 +18,7 @@
   background-repeat: no-repeat;
 }
 
-.Page-Home-Title-Container {
+.Page-Home-Container {
   position: absolute;
   top: 40%;
 }
@@ -37,11 +37,10 @@
   color: white;
 }
 
-.Page-Home-Container {
+.Page-Home-Button-Container {
   display: flex;
   flex-direction: row;
-  position: absolute;
-  top: 53%;
+  margin-top: 10px;
   width: 370px;
   justify-content: space-between;
 }
@@ -67,7 +66,7 @@
 }
 
 /* Styling for mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
   .Page-Home-Title {
 	  font-size: 30pt;
   }
@@ -76,10 +75,12 @@
 	  font-size: 12pt;
   }
 
-  .Page-Home-Container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  .Page-Home-Button-Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 53%;
+    width: 370px;
   }
 
   .Page-Home-Button {
